# node-can-bridge

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSE  binding-options.cjs  binding.gyp  cmake-js.cmake  move-files.cmake  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
CANBridge/: CANBridge86-64.lib
CANBridge/rev/: CANDevice.h
CANBridge/rev/Drivers/: DriverDeviceThread.h
CANBridge/rev/Drivers/CandleWinUSB/: CandleWinUSBDevice.h  CandleWinUSBDeviceThread.h
CANBridge/static/: CANBridge.lib
CANBridge/x86-64/: CANBridge.lib  wpiHal.lib  wpiHaljni.lib  wpiutil.lib  wpiutiljni.lib
lib/: binding.ts
scripts/: download-CanBridge.mjs
src/: CANLib.cpp  CANLib.h  CandleWinUSBDeviceWrapper.h  DfuSeFile.h  addon.cc  addon.cpp  canWrapper.cc  canWrapper.h
test/: test_binding.js
